...
                  ),
                ),
              );
            }
          },
          child: CircleAvatar(
            key: Key('ProfileIcon'),
            radius: screenWidth > screenHeight
                ? 50
                : 40,
            backgroundImage: _profileImgPath != null
                ? NetworkImage(_profileImgPath!)
                : NetworkImage('https://i.ibb.co/WfJVvF6/profile-mock.png'),
...
